Fixed text spacing for endgame

--- a/css/tictactoe.css
+++ b/css/tictactoe.css
@@ -32,7 +32,7 @@ td {
   .endgame {
     display: none;
     width:  200px;
-    top: 100px;
+    top: 75px;
     background-color: #504f4df5;
     position: absolute;
     left: 50%;
@@ -83,9 +83,8 @@ td {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin-top: auto;
+    margin-top: 50px;
     margin-bottom: auto;
-    margin: 4px 4px;
     transition-duration: 0.4s;
     cursor: pointer;
   }
